# self-learning

./: .gitignore  README.md  pyproject.toml
.github/workflows/: code_format_check.yml  notebook_format_check.yml
2D_shape_recognition/: README.md  cnn.ipynb  data_processing.ipynb  shape_recognition.yml
aws_tutorials/: README.md  data.ipynb  requirements.txt  s3_infra.ipynb  s3_stack.ipynb  s3_stack.py  s3_with_sdk.py  user_policy.json
aws_tutorials/cdk/: app.py  s3_stack.py
aws_tutorials/s3/: README.md  data.ipynb  requirements.txt  s3_infra.ipynb  user_policy.json
finnish-domestic-migration/: Demographics.ipynb  README.md  ho_network_analysis.py  migration.yml
finnish-domestic-migration/finland_map/: map.py
finnish-domestic-migration/src/: data_exploration.py  introduction_to_data.ipynb  utils.py
food_orders_forecasting/: README.md  orders_autumn_2020.csv  orders_ts_analysis.ipynb  requirements.txt
food_orders_forecasting/.ipynb_checkpoints/: orders_ts_analysis-checkpoint.ipynb
herd_simulation/: README.md
herd_simulation/doc/: Dokumentti.docx
herd_simulation/src/: car_info.csv  (+12 more)
postalcode_analysis/: README.md  exploration.ipynb  fetch_postal_code_geojson copy.py  preprocessing.ipynb  pyproject.toml  requirements.txt
postalcode_analysis/data_exploration/: combined_data.ipynb  education_and_income.ipynb  living_and_labor.ipynb  population.ipynb  utils.py
postalcode_analysis/data_exploration/profile_reports/: paavo_education_report.html  paavo_labor_report.html  paavo_population_report.html
student_register/: README.md  student_register.c
(+5 files in other folders)
