[tool.poetry]
name = "postalcode_analysis"
version = "0.1.0"
description = ""
authors = ["Rasmus Siljander"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "3.8.3"
jupyter = "1.0.0"
pathlib = "1.0.1"
scikit-learn = "^1.5.0"
seaborn = "0.11.2"
nbqa = "1.7.1"
polars = "0.12.0"
pyarrow = "14.0.2"
ydata-profiling = "^4.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
